1.0.4 Sept 14, 2016
  - Allow purchase preview
1.0.3 Aug 10, 2016
  - Handle success response with "null" body
  - Add payments PR#2 from mdabydeen
	- Add customer listCreditCards PR#3 from mdabydeen
1.0.2 Aug 10, 2016
  - Add ProductSummary enpoints
1.0.1 July 10, 2016
  - Add CustomerHold, ReverseCharge, Customer list
1.0.0 June 10, 2016
  - Initial release with customers and tokens APIs