@@ -69,5 +69,10 @@ module.exports = FusebillResource.extend({
     urlParams: ['customerId'],
   }),
 
+  listPurchases: fusebillMethod({
+    method: 'GET',
+    path: '/{customerId}/purchases',
+    urlParams: ['customerId'],
+  }),
 
 });
