@@ -1,5 +1,6 @@
 1.0.4 Sept 14, 2016
   - Allow purchase preview
+  - Add endpoint for list customer purchases
 1.0.3 Aug 10, 2016
   - Handle success response with "null" body
   - Add payments PR#2 from mdabydeen
